# Uni-First-year-project-Poker-Harris-Dylan-Jared-James

./: Hand comparison functions  Incomplete hand comparison function  README.md  code that works for group project-Copy1.ipynb  code that works for group project.ipynb  pypokerprob_test  pyproject.toml  uni pyth group project.py
py_poker_prob.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pypokerprob/: __init__.py  core.py
tests/: test.py
